--- a/nerochan/templates/includes/head.html
+++ b/nerochan/templates/includes/head.html
@@ -16,5 +16,7 @@
   <meta name="twitter:description" content="This is a sample application making using of Flask, a Flask replacement for Python">
   <meta name="twitter:image" content="">
   <meta name="keywords" content="Wownero, Monero, crypto, swap">
-  <link rel="stylesheet" href="/static/css/main.css" />
+  <link rel="stylesheet" href="/static/css/normalize.css">
+  <link rel="stylesheet" href="/static/css/skeleton.css">
+  <link rel="stylesheet" href="/static/css/main.css">
 </head>
