--- a/nerochan/templates/includes/head.html
+++ b/nerochan/templates/includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <title>{{ config.SITE_NAME }}</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/png">
   <meta itemprop="name" content="MyThing app">
   <meta itemprop="description" content="This is a sample application making using of Flask, a Flask replacement for Python">
