--- a/nerochan/templates/user/show.html
+++ b/nerochan/templates/user/show.html
@@ -2,7 +2,15 @@
 
 {% block content %}
 
-<h1>{{ user.handle }}</h1>
-<p>User details</p>
+
+
+<div class="container">
+    <div class="row">
+		<h1>{{ user.handle }}</h1>
+        <p>User details</p>
+	</div>
+</div>
+
+
 
 {% endblock %}
