--- a/nerochan/templates/about.html
+++ b/nerochan/templates/about.html
@@ -2,7 +2,18 @@
 
 {% block content %}
 
-<h1>about</h1>
-<p>nerochan, uwu</p>
+<div class="container">
+    <div class="row">
+        <h1>about</h1>
+        <p>
+            This site is dedicated to the Monero communities' favorite e-girl, <a href="https://monerochan.art" target="_blank">Monero-Chan</a>.
+        </p>
+        <p>
+            Made with <3 by <a href="https://twitter.com/lza_menace" target="_blank">@lza_menace</a>. 
+            Send him a tip: <span class="walletAddress">49awrmn61ExDUZrV5wJxMM54fxVzHABUYUBNBskLJbxzVwk1KqfrFvdcPNK6RKY2qyfGbcpXP3mbofmnMmFKiFHSCB6jLFA</span>
+        </p>
+        
+    </div>
+</div>
 
 {% endblock %}
