--- a/nerochan/templates/includes/base.html
+++ b/nerochan/templates/includes/base.html
@@ -1,18 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	{% include 'includes/head.html' %}
-	<body style="background-color: black; color: white;">
-		{% include 'includes/header.html' %}
+	<body>
+		{% include 'includes/navbar.html' %}
 		{% block content %}{% endblock %}
 		{% include 'includes/debug.html' %}
-		<style>
-			body {
-				background-color: black;
-				color: white;
-			}
-			a, a:visited {
-				color: white;
-			}
-		</style>
 	</body>
 </html>
