--- a/nerochan/templates/auth/challenge.html
+++ b/nerochan/templates/auth/challenge.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 
-<h2>Challenge</h2>
-<p>Handle: {{ user.handle }}</p>
-<p>Challenge: {{ user.challenge }}</p>
-<p>Wallet Address: {{ user.wallet_address }}</p>
-{% include 'includes/form.html' %}
+<div class="container">
+    <div class="row">
+        <h1>challenge</h1>
+        <p>Handle: {{ user.handle }}</p>
+        <p>Challenge: <span class="walletAddress">{{ user.challenge }}</span></p>
+        <p>Wallet Address: <span class="walletAddress">{{ user.wallet_address }}</span></p>
+        {% include 'includes/form.html' %}
+    </div>
+</div>
+
+
 
 {% endblock %}
