--- a/nerochan/static/css/main.css
+++ b/nerochan/static/css/main.css
@@ -8,6 +8,12 @@ a, a:visited {
     color: white;
 }
 
+.container-wide {
+    max-width: 90%;
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
 .artworkLink img {
     border-radius: 2px;
     margin: 1em;
@@ -93,7 +99,7 @@ input[type="text"] {
     margin-right: 35px;
     text-decoration: none;
     line-height: 6.5rem;
-    color: #222;
+    color: #fff;
     transition: all .2s ease;
 }
 
