--- a/nerochan/templates/includes/navbar.html
+++ b/nerochan/templates/includes/navbar.html
@@ -4,9 +4,12 @@
       <li class="navbar-item"><a class="navbar-link" href="{{ url_for('main.index') }}">Home</a></li>
       <li class="navbar-item"><a class="navbar-link" href="{{ url_for('main.about') }}">About</a></li>
       {%- if current_user.is_authenticated %}
-      <li class="navbar-item"><a class="navbar-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
+        {%- if current_user.is_admin %}
+          <li class="navbar-item"><a class="navbar-link" href="{{ url_for('admin.main') }}">Admin</a></li>
+        {% endif %}
+        <li class="navbar-item ml-2"><a class="navbar-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
       {%- else %}
-      <li class="navbar-item"><a class="navbar-link" href="{{ url_for('auth.login') }}">Login</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="{{ url_for('auth.login') }}">Login</a></li>
       {%- endif %}
     </ul>
   </div>
