--- a/nerochan/templates/admin/main.html
+++ b/nerochan/templates/admin/main.html
@@ -5,19 +5,23 @@
 <div class="container">
     <div class="row">
 		  <h1>admins</h1>
-      <p>Add a homie</p>
+      <p>
+        Add a homie to be an admin. <br />
+        Admins can manage other admins as well as hide artwork, <br />
+        approve/reject artwork, ban artists, and verify artists.
+      </p>
       <form method="post" action="">
-        {{ user_form.csrf_token }}
+        {{ admin_form.csrf_token }}
         <div class="row">
 					<div class="two columns">
-            {{ user_form.handle }}
+            {{ admin_form.handle }}
 					</div>
           <div class="two columns">
             <input class="button-primary" type="submit" value="Submit">
 					</div>
 				</div>
         <ul>
-          {%- for field, errors in user_form.errors.items() %}
+          {%- for field, errors in admin_form.errors.items() %}
             <li>{{ ', '.join(errors) }}</li>
           {%- endfor %}
         </ul>
@@ -28,6 +32,35 @@
         {% endfor %}
       </ul>
 	</div>
+  <hr>
+  <div class="row">
+    <h1>artists</h1>
+    <p>
+      Verified artists will skip the queue <br />
+      and have their artwork displayed immediately. 
+    </p>
+    <form method="post" action="">
+      {{ artist_form.csrf_token }}
+      <div class="row">
+        <div class="two columns">
+          {{ artist_form.handle }}
+        </div>
+        <div class="two columns">
+          <input class="button-primary" type="submit" value="Submit">
+        </div>
+      </div>
+      <ul>
+        {%- for field, errors in artist_form.errors.items() %}
+          <li>{{ ', '.join(errors) }}</li>
+        {%- endfor %}
+      </ul>
+    </form>
+    <ul>
+      {% for artist in artists %}
+        <li><h6>{{ artist.handle }} - <a href="?unverify={{ artist.handle }}">remove</a></h6></li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
 
 {% endblock %}
