--- a/nerochan/templates/includes/navbar.html
+++ b/nerochan/templates/includes/navbar.html
@@ -5,7 +5,7 @@
       <li class="navbar-item"><a class="navbar-link" href="{{ url_for('main.about') }}">About</a></li>
       {%- if current_user.is_authenticated %}
         {%- if current_user.is_admin %}
-          <li class="navbar-item"><a class="navbar-link" href="{{ url_for('admin.main') }}">Admin</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="{{ url_for('admin.dashboard') }}">Admin</a></li>
         {% endif %}
         <li class="navbar-item ml-2"><a class="navbar-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
       {%- else %}
