working on uploads

--- a/nerochan/templates/artwork/show.html
+++ b/nerochan/templates/artwork/show.html
@@ -10,17 +10,22 @@
 			posted by <a href="{{ url_for('user.show', handle=artwork.user.handle) }}">{{ artwork.user.handle }}</a> - {{ artwork.upload_date | humanize }}
 		</h6>
 		<p class="artworkDescription">{{ artwork.description }}</p>
-		{% if not artwork.approved %}
-			<div class="row">
-				{% if artwork.hidden %}
-					<a href="{{ url_for('artwork.manage', id=artwork.id, action='delete') }}"><button class="button-secondary">Delete</button></a>
-				{% else %}
-					<a href="{{ url_for('artwork.manage', id=artwork.id, action='reject') }}"><button class="button">Reject</button></a>
-				{% endif %}
-				<a href="{{ url_for('artwork.manage', id=artwork.id, action='approve') }}"><button class="button-primary">Approve</button></a>
-				
-			</div>
-		{% endif %}
+		<div class="row">
+			{% if not artwork.approved %}
+					{% if artwork.hidden %}
+						<a href="{{ url_for('artwork.manage', id=artwork.id, action='delete') }}"><button class="button-secondary">Delete</button></a>
+					{% else %}
+						<a href="{{ url_for('artwork.manage', id=artwork.id, action='reject') }}"><button class="button">Reject</button></a>
+					{% endif %}
+					<a href="{{ url_for('artwork.manage', id=artwork.id, action='approve') }}"><button class="button-primary">Approve</button></a>
+					
+			{% endif %}
+			{% if current_user.is_authenticated and current_user.is_admin %}
+				<span class="ml-4">
+					<a href="{{ url_for('artwork.manage', id=artwork.id, action='regenerate_thumbnail') }}"><button class="button">Regen Thumbnail</button></a>
+				</span>
+			{% endif %}
+		</div>
 	</div>
 	<hr>
 	<div class="row">
