get artwork list working

--- a/nerochan/templates/artwork/show.html
+++ b/nerochan/templates/artwork/show.html
@@ -7,7 +7,9 @@
     <div class="row">
 		<h2 class="no-margin"><strong>{{ artwork.title }}</strong></h2>
 		<span>
+			{% if artwork.nsfw %}
 			<p class="inline nsfw">NSFW</p>
+			{% endif %}
 			<h6 class="no-margin inline">
 				posted by <a href="{{ url_for('user.show', handle=artwork.user.handle) }}">{{ artwork.user.handle }}</a> - {{ artwork.upload_date | humanize }}
 			</h6>
@@ -16,12 +18,13 @@
 		<div class="row">
 			{% if current_user.is_authenticated and current_user.is_admin %}
 				<a href="{{ url_for('artwork.manage', id=artwork.id, action='regenerate_thumbnail') }}"><button class="button">Regen Thumbnail</button></a>
+				<a href="{{ url_for('artwork.manage', id=artwork.id, action='toggle_nsfw') }}"><button class="button">Toggle NSFW</button></a>
 			{% endif %}
 			{% if not artwork.approved %}
 				{% if artwork.hidden %}
 					<a href="{{ url_for('artwork.manage', id=artwork.id, action='delete') }}"><button class="button-secondary">Delete</button></a>
 				{% else %}
-					<a href="{{ url_for('artwork.manage', id=artwork.id, action='reject') }}"><button class="button">Reject</button></a>
+					<a href="{{ url_for('artwork.manage', id=artwork.id, action='reject') }}"><button class="button-secondary">Reject</button></a>
 				{% endif %}
 				<a href="{{ url_for('artwork.manage', id=artwork.id, action='approve') }}"><button class="button-primary">Approve</button></a>
 			{% endif %}
