--- a/nerochan/templates/user/show.html
+++ b/nerochan/templates/user/show.html
@@ -3,10 +3,55 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
-		<h1>{{ user.handle }}</h1>
-        <p>User details</p>
+  <div class="row">
+		<h2 class="no-margin"><strong>{{ user.handle }}</strong></h2>
+		<span>
+      {% if user.is_admin %}
+        <p class="inline nsfw">ADMIN</p>
+      {% endif %}
+      {% if user.is_verified %}
+        <p class="inline nsfw">VERIFIED</p>
+      {% endif %}
+      <h6 class="no-margin inline">
+				registered {{ user.register_date | humanize }} - last login {{ user.last_login_date | humanize }}
+			</h6>
+		</span>
+    <br />
+    <br />
+		<h6 class="walletAddress mt-2">{{ user.wallet_address }}</h6>
 	</div>
+	<hr>
+	<div class="row">
+		<h1>artworks</h1>
+		{% if artwork %}
+            {%- for _artwork in artwork | batch(4) %}
+                {%- for artwork in _artwork %}
+                    <a class="artworkLink" href="{{ url_for('artwork.show', id=artwork.id) }}">
+                        <img src="{{ url_for('main.uploaded_file', filename=artwork.thumbnail) }}" width="150px">
+                    </a>
+                {%- endfor %}
+            {%- endfor %}
+            
+
+		{% else %}
+		    <p>There's nothing here yet...</p>
+		{% endif %}
+    </div>
+    {% if artwork %}
+        <div class="row mt-4">
+            <span class="inline">
+                {% for i in range(1, total_pages + 1) %}
+                    <h6 class="inline">
+                        {% if i == page %}
+                            {{ page }}
+                        {% else %}
+                            <a href="?page={{ i }}">{{ i }}</a>
+                        {% endif %}
+                    </h6>
+                {% endfor %}
+            </span>
+        </div>
+    {% endif %}
 </div>
 
 {% endblock %}
